# djangoshop

./: README.TXT  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
shop/: admin.py  forms.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_customuser_address_alter_customuser_email_and_more.py  0003_customuser_is_administrator.py  0004_customuser_papel.py
shop/static/shop/css/: main.css
shop/templates/: base.html  home.html
shop/templates/administrador/: admin_index.html
shop/templates/registration/: login.html  signup.html
